# classnote

./: Cargo.toml  LICENSE  README.md  TODO.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
crates/data/: Cargo.toml
crates/data/src/: class.rs  config.rs  lib.rs  location.rs  obsidian.rs  time.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: config.rs  io.rs  lib.rs  note.rs  parse_time.rs
src/: data.rs  helpers.rs  main.rs
src/data/: class.rs
src/helpers/: config.rs  io.rs
